# adastra-lib

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  README.txt  ROADMAP.md  build_dev.sh  build_prod.sh  clean.sh  run.sh  run_tests.sh
include/adastra/core/algorithms/: Search.hpp
include/softadastra/shop/: ShopManager.hpp
lib/: CMakeLists.txt
lib/adastra/: CMakeLists.txt
lib/softadastra/: CMakeLists.txt
lib/softadastra/shop/: ShopManager.cpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
unittests/: CMakeLists.txt  README.md
unittests/core/: test_search.cpp
unittests/softadastra/: test_pay.cpp
unittests/utils/: test_string.cpp
